kustomize/components/route/config.service.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-config-editor
  labels:
    quay-component: route
spec:
  type: ClusterIP
  selector:
    quay-component: quay-config-editor
