kustomize/components/route/quay.service.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-app
  labels:
    quay-component: quay-app
spec:
  type: ClusterIP
  selector:
    quay-component: quay-app
