kustomize/components/route/builder.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay-builder
  labels:
    quay-component: quay-builder-route
  annotations:
    component: "route"
spec:
  host: $(BUILDMAN_HOSTNAME)
  to:
    kind: Service
    name: quay-app
  port:
    targetPort: grpc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
