kustomize/components/route/config.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay-config-editor
  labels:
    quay-component: quay-config-route
  annotations:
    component: "route"
spec:
  to:
    kind: Service
    name: quay-config-editor
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
