kustomize/components/route/quay.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay
  labels:
    quay-component: route
spec:
  host: $(SERVER_HOSTNAME)
  to:
    kind: Service
    name: quay-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
